# trading-agent-worker

./: .gitignore  Dockerfile  filter.py  goal.yaml  loop.py  main.py  pyproject.toml  reflect.py  score.py
adapters/: __init__.py  market.py
state/: strategy.yaml  whale_data.json
