[project]
name = "trading-agent-worker"
version = "0.1.0"
description = "Self-improving trading agent worker"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.4.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[tool.hatch.build.targets.wheel]
packages = ["."]
